fix: hide overflow

--- a/eleff-law/app/public/wp-content/themes/elefflawclone/components/front-page-section-five.css
+++ b/eleff-law/app/public/wp-content/themes/elefflawclone/components/front-page-section-five.css
@@ -1,5 +1,6 @@
 .front-page-section-five__content {
   padding: 100px 5%;
+  overflow: hidden;
 }
 
 .front-page-section-five__content .heading {
