--- a/eleff-law/app/public/wp-content/themes/elefflawclone/components/front-page-section-six.css
+++ b/eleff-law/app/public/wp-content/themes/elefflawclone/components/front-page-section-six.css
@@ -7,6 +7,8 @@
       #eee 100%
     ),
     url(../images/pattern-2.png);
+
+  overflow: hidden;
 }
 
 .front-page-section-six__content .law-services-content {
